--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,9 @@ body {
   text-rendering: optimizeLegibility;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@media (max-width: 600px) {
+  html,
+  body {
+    font-size: 7px;
+  }
 }
